# data-engineering-finnhub-market-analytics

./: .dockerignore  .env.docker.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: cd-terraform.yml  ci.yml
airflow/: Dockerfile  README.md  requirements.txt
airflow/dags/: finnhub_ingestion.py
dbt_finnhub/: Dockerfile  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.docker.yml  profiles.yml.example
dbt_finnhub/macros/: cents_to_dollars.sql  generate_schema_name.sql  safe_divide.sql
dbt_finnhub/models/marts/: _mrt__models.yml  dim_companies.sql  dim_dates.sql  fct_company_financials.sql  fct_company_news.sql  fct_daily_prices.sql
dbt_finnhub/models/metrics/: _metrics__models.yml  sector_performance.sql  sector_volatility.sql
dbt_finnhub/models/staging/: _stg__models.yml  _stg__sources.yml  stg_candles.sql  stg_company_financials.sql  stg_company_news.sql  stg_company_profiles.sql
dbt_finnhub/seeds/: sector_mapping.csv
dbt_finnhub/snapshots/: snap_company_profiles.sql
dbt_finnhub/sql/: create_external_tables.sql
dbt_finnhub/tests/: assert_positive_volume.sql  assert_valid_return_range.sql
ingestion/: .env.example  Dockerfile  README.md  pyproject.toml
ingestion/src/finnhub_pipeline/: __init__.py  builders.py  config.py  finnhub_client.py  jobs.py  runner.py  storage.py  universe.py  utils.py
ingestion/src/finnhub_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
